# cpp

./: .gitignore  README.md
projects/array/: CMakeLists.txt  README.md  main.cpp
projects/cli_output/: CMakeLists.txt  README.md  main.cpp
projects/cmd_args/: CMakeLists.txt  README.md  main.cpp
projects/flow_control/: CMakeLists.txt  README.md  main.cpp
projects/functional_programming/: CMakeLists.txt  README.md
projects/functional_programming/src/: main.cpp  simple_math.cpp  simple_math.h
projects/hello_world/: .gitignore  CMakeLists.txt  README.md  main.cpp
projects/learnopengl/hello_triangle/: CMakeLists.txt  README.md
projects/learnopengl/hello_triangle/src/: glad.c  main.cpp  main_ebo.cpp
projects/learnopengl/hello_window/: CMakeLists.txt  README.md
projects/learnopengl/hello_window/include/glad/: glad.h
projects/learnopengl/hello_window/src/: main.cpp
projects/pointers_ref/: CMakeLists.txt  README.md  main.cpp
projects/string/: CMakeLists.txt  README.md  main.cpp
projects/syntax/: CMakeLists.txt  README.md  main.cpp
